[workspace]
members = [ "krios", "flo" ]

[package]
name = "sajban"
version = "0.0.1"
authors = ["li <@li:maisiliym.xyz>"]
edition = "2018"

[dependencies.serde]
version = "*"
default-features = false
features = [ "derive" ]
git = "file:///git/github.com/serde-rs/serde"
branch = "master"

[dependencies.async-trait-static]
version = "*"
git = "file:///git/github.com/tiannian/async-trait-static"
branch = "master"

[dependencies.blake3]
version = "*"
default-features = false
features = []
git = "file:///git/github.com/BLAKE3-team/BLAKE3"
branch = "master"
