[workspace]
members = [ "krios", "flo" ]

[package]
name = "sajban"
version = "0.0.1"
authors = ["li <@li:maisiliym.xyz>"]
edition = "2018"

[features]
default = []
uniks = ["serde/std",  "blake3/std"]

[dependencies.serde]
version = "*"
default-features = false
features = [ "derive" ]

[dependencies.async-trait-static]
version = "*"
git = "file:///git/github.com/tiannian/async-trait-static"
branch = "master"

[dependencies.blake3]
version = "*"
default-features = false
features = [ "serde" ]
git = "file:///git/github.com/BLAKE3-team/BLAKE3"
branch = "maisiliym/serde-1"

[dependencies.ed25519-dalek]
version = "*"
default-features = false
features = [ "nightly", "u64_backend" ]
git = "file:///git/github.com/dalek-cryptography/ed25519-dalek"
branch = "master"

[dependencies.generic-array]
version = "*"
features = [ "serde" ]
git = "file:///git/github.com/fizyk20/generic-array"
branch = "master"
