[package]
name = "flo"
version = "0.0.1"
authors = ["li <@li:maisiliym.xyz>"]
workspace = ".."
edition = "2018"

[features]

[dependencies.serde]
version = "*"
default-features = false
features = [ "derive" ]
git = "file:///git/github.com/serde-rs/serde"
branch = "master"

[dependencies.futures-micro]
version = "*"
features = []
git = "file:///git/github.com/irrustible/futures-micro"
branch = "main"

[dependencies.generic-array]
version = "*"
features = []
git = "file:///git/github.com/fizyk20/generic-array"
branch = "master"
