[package]
name = "flo"
version = "0.0.1"
authors = ["li <@li:maisiliym.xyz>"]
workspace = ".."
edition = "2018"

[features]

[dependencies]
sajban = { version = "*", features = [], path = "../" }

[dependencies.futures-micro]
version = "*"
features = []
git = "file:///git/github.com/irrustible/futures-micro"
branch = "main"
