[package]
name = "roski_derive"
version = "0.0.1"
authors = ["li <@li:maisiliym.xyz>"]
workspace = ".."
edition = "2018"

[lib]
proc-macro = true

[features]

[dependencies.askiom]
version = "*"
path = "../askiom"

[dependencies.proc-macro2]
version = "*"
git = "file:///git/github.com/alexcrichton/proc-macro2"
branch = "master"


[dependencies.quote]
version = "*"
git = "file:///git/github.com/dtolnay/quote"


[dependencies.syn]
version = "*"
git = "file:///git/github.com/dtolnay/syn"

# [dependencies.darling]
# version = "*"
# git = "file:///git/github.com/teddriggs/darling"
